--- a/style/main.css
+++ b/style/main.css
@@ -3,11 +3,7 @@
 ======================*/
 
 body{
-    background-image: url("https://partituramusic.com/wp-content/uploads/2018/04/diario-textura-1024x768.jpg");
-    background-color: hsl(208, 100%, 97%);
-    background-repeat: no-repeat ;
-    background-attachment: fixed;
-    background-size: cover;
+    background-color: hsl(44deg, 5%, 58%);
     display:flex; 
     flex-direction:column;    
     margin: 1em auto;
@@ -18,7 +14,6 @@ body{
 header{
     display: flex;
     height: 10.2vh;
-    
     justify-content:space-between;
 }
 
@@ -53,14 +48,6 @@ footer{
 }
 .menu
 {
-    display:inline-block;
-    /*background-color: hsl(207, 85%, 69%);*/
-    padding: 0.2em 0;
-    width: 10%;
-    text-align: center;
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
     font-size:0;
 }
 
@@ -72,14 +59,12 @@ footer{
 }
 .menu li
 {
-    /*display:inline-block;*/
+    margin:5em 1em ;
     float: right;
-    width:10%;
-    padding:5px 10px;
-    background-color:#000;
-    border:1px solid #000;
+    padding:5em 10em;
+    border:1em solid #000;
     text-align:center;
-    color:#fff;
+    color:hsl(0, 0%, 100%);
 }
 
 .menu li:hover
@@ -145,8 +130,8 @@ a:focus, a:hover {
 ========Image=========
 ======================*/
 
-img {
-    max-width: 100%;
+.general img{
+    width: 100%;
 }
 
 /*====================
@@ -179,10 +164,12 @@ img {
 {
     position: relative;
     text-align: center;
+    
 }
 
-.image-down__description
+.image-down__text
 {
+    
     text-align: center;
     position: absolute;
     top: 70%;
@@ -195,11 +182,11 @@ img {
 
 .new
 {
-    justify-content:space-between;
+    
     display: flex;
     padding-top: 3em;
-    min-width: 45%;
-    max-width: 45%;
+    /*min-width: 45%;
+    max-width: 45%;*/
     
 }
 
@@ -208,8 +195,16 @@ img {
     padding-left: 1em;
 }
 
+.new__first img, .new__second img, .new__third img 
+{
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
+}
+
 .new__first p, .new__second p, .new__third p
 {
+    
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -220,7 +215,7 @@ img {
 =========CRUD=========
 ======================*/
 
-.crud{
+/*.crud{
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -359,7 +354,7 @@ table
 .author p:hover
 {
     color: hsl(0, 100%, 50%); /*por ejemplo, que se ponga en rojo cuando pasa por encima */
-}
+/*}*/
 
 @media (max-width:479px) {
 
