--- a/style/main.css
+++ b/style/main.css
@@ -12,7 +12,7 @@ body{
 }
 
 header{
-    /*position: fixed;*/
+    position: fixed;
     display: flex;
     height: 10.2vh;
     justify-content:space-between;
@@ -47,7 +47,7 @@ footer{
     display: flex;
     justify-content:space-between;
     width: 100%;
-    background: hsl(0, 0%, 0%);
+    /*background: hsl(0, 0%, 0%);*/
     height: 4em;
 }
 
@@ -167,22 +167,17 @@ a:focus, a:hover {
     
 }
 
-.new__second, .new__third
-{
-    margin-left: 6em;
-}
-
-.new__first img, .new__second img, .new__third img 
+.new__element
 {
     display: flex;
     justify-content: space-between;
     max-width: 100%;
+    margin-left: 6em;
 }
 
 
-.new__first p, .new__second p, .new__third p
+.new__element p
 {
-    
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -204,136 +199,9 @@ a:focus, a:hover {
 }
 
 
-/*====================
-=========CRUD=========
+/*======================
+=========FOOTER=========
 ======================*/
-
-.crud{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.crud__table, .crud__form{
-    min-width: 45%;
-    max-width: 45%;
-}
-
-.crud__table-grid, .crud__table-flex{
-    margin-bottom: 1em;
-    width: 100%;
-}
-
-.crud__table-grid{
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-gap: 0.5em;
-}
-
-.crud__table-grid-element{
-    width: 100%;
-}
-
-.crud__table-flex{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.5em;
-}
-
-.crud__table-flex-element{
-    flex-basis: 25%;
-}
-
-table 
-{
-    border-collapse: collapse;
-    width: 100%;
-}
-  
-  td, th 
-{
-    border: 0.2em solid hsl(0, 0%, 100%);
-    text-align: left;
-    padding: 8px;
-    background: hsl(199, 67%, 63%);
-}
-.crud__form{
-    width: 100%;
-}
-
-.crud__form-element{
-    margin-bottom: 1em;
-    width: 100%;
-}
-
-.crud__form-label{
-    margin-bottom: 1em;
-    width: 100%;
-}
-
-.crud__form-label label{
-    color: hsl(0, 0%, 100%);
-	font-family: "Ubuntu";
-	font-weight: 600;
-	font-size: 1em;
-	transition: color 0.5s;
-}
-
-.crud__form-label--active label{
-	color: hsl(19, 100%, 50%);
-}
-
-.crud__form-input{
-    width: 100%;
-}
-
-.crud__form-input input, 
-.crud__form-input textarea,
-.crud__form-input select {
-    background-color: hsl(0, 0%, 100%);
-	border: none;
-	border-bottom: 1px solid hsl(0, 0%, 73%);
-	box-sizing: border-box;
-    color: hsl(0, 0%, 0%);
-	font-family: "Ubuntu";
-	font-weight: 600;
-	padding: 0.2em 0.5em;
-	width: 100%;
-}
-
-.crud__form-input input:focus, .crud__form-input textarea:focus{
-	outline: none;
-}
-
-.crud__form-input select, .crud__form-input select:focus, .crud__form-input select:active { 
-	outline: 0 !important; 
-}
-
-.crud__store-button{
-	background-image: linear-gradient(to right, #253786 0%, #02A8B0 50%, #253786 100%);
-    background-size: 200% auto;
-    border-radius: 1em;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 1.2em;
-	font-weight: 600;
-	letter-spacing: 0;
-	line-height: 0px;
-    margin-top: 1em;
-	min-width: 20%;
-	padding: 1em 2em;
-	transition: 0.5s;
-	text-decoration: none;
-}
-
-.crud__store-button:hover{
-    background-size: 100% auto;
-}
-
-.crud__store-button:focus {
-	outline: 0;
-}
 
 .footer-element{
     width: 100%;
@@ -342,7 +210,6 @@ table
 .footer-element p{
     text-align: center;
 }
-
 
 .author p:hover
 {
