--- a/style/main.css
+++ b/style/main.css
@@ -170,8 +170,8 @@ a:focus, a:hover {
 .new__element
 {
     display: flex;
-    justify-content: space-between;
-    max-width: 100%;
+    height: 25em;
+    margin-right: -8em;
     margin-left: 6em;
 }
 
