--- a/style/main.css
+++ b/style/main.css
@@ -180,16 +180,6 @@ a:focus, a:hover {
 }
 
 
-.new__element p
-{
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.new p{
-    text-align: center;
-    margin-top: 2em;
-    box-align: end;
-}
 
 /*=====================
 =========ABAJO=========
@@ -200,6 +190,17 @@ a:focus, a:hover {
     margin-top: 4em;
     display: flex;
     justify-content: space-between;
+}
+
+/*==================
+=========3D=========
+==================*/
+
+.services__image model-viewer 
+{
+    
+    height: 20em;
+    width: 20em;
 }
 
 
